# MysoreScript

./: CMakeLists.txt  README.md
examples/: fibonacci-pl.ms  fibonacci.pl  floyd.pl  hello.ms  insertion-sort-pl.ms  insertion-sort.pl  merge-sort-pl.ms  merge-sort.pl  pi-spigot-pl.ms  pi-spigot.pl  prolog-floyd.ms
lib/SWI-Prolog/: SWI-cpp.h  bridge  bridge.cc
src/: ast.hh  compiler.cc  compiler.hh  grammar.hh  interpreter.cc  interpreter.hh  main.cc  parser.hh  runtime.cc  runtime.hh
tests/: if_else.ms  syntax.ms
